# e-commerce

./: .env.dist  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
market/api_payments/: apps.py  custom_validators.py  serializers.py  urls.py  views.py
market/cart/: forms.py  urls.py  views.py
market/catalog/: common.py  context.py  forms.py  urls.py  utils.py  views.py
market/comparison/: admin.py  forms.py  services.py  urls.py  views.py
market/config/: __init__.py  celery.py  settings.py  urls.py
market/context_processors/: catalog_context.py  comparison_context.py  menu_context.py  settings_context.py
market/discount/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
market/fixtures/: 01-users.json  02-groups.json  04-shops.json  05-category.json  06-manufacturer.json  07-tags.json  08-products.json  09-offers.json  10-details.json  11-productimages.json  12-productdetails.json  13-reviews.json  14-banners.json  15-site_settings.json  16-sets.json  17-discounts.json  18-limited_offer.json
market/import_folder/: errors_in_all_products.json  format_error_file.jsn  successed_file.json
market/importdata/: apps.py  forms.py  services.py  tasks.py  tests.py  urls.py  views.py
market/orders/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
market/payapp/: admin.py  forms.py  models.py  urls.py  views.py
market/products/: admin.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
market/profiles/: admin.py  forms.py  models.py  urls.py  views.py
(+136 files in other folders)
